@@ -19,6 +19,8 @@
     <string name="please_wait">Please Wait...</string>
     <string name="error">Error</string>
     <string name="warning">Warning</string>
+    <string name="info">Info</string>
+    <string name="usb_debugging_note">Please note: If you have trouble with Autostarts hanging while trying to disable or enable an application, please be sure to activate the \"USB Debugging\" option in your device settings under \"Applications -> Development\".\n\nIt\'s a bug in the Superuser Whitelist application that will hopefully be fixed in a future version.</string>
     <string name="confirm_sys_disable">You are about to disable a system component. This could potentially result in your phone no longer functioning properly.\n\nDo not proceed unless you are willing to deal with the consequences.</string>
     <string name="state_change_failed">Unable to change the state of the selected component.\n\nMost likely, your device does not have root access, which is required.</string>
     <string name="uninstall_warning">Important: Due to technical restrictions, you will currently lose the ability to re-enable components once you remove Autostarts, so please make sure you do so <b>before</b> uninstalling the app. I am hopeful that this issue will go away in future versions. Sorry for the inconvenience.\n\nMore information is available via <b>MENU -> Help</b>.</string>
@@ -30,6 +32,8 @@
 \n\n<i>a) The component in question may be responsible for other parts of the application\'s functionality than just the given event.</i> As a result, you may experience unintended side effects. For the most part though, you can just give things a try, and enable the component again should the application break.
 
 \n\n<i>b) If you remove Autostarts, you will lose all information about currently disabled components.</i> Again, this is due to Android limitations, which require <i>Autostarts</i> to keep track by itself which components have been disabled. As a result, before you uninstall <i>Autostarts</i>, be sure to renable the components you still need (Of course, the same is true for clearing the <i>Autostarts</i> application data, e.g. through the Settings <i>Manage Applications</i> option - don\'t do it).
+
+\n\n<b>Autostarts is freezing when I try to disable something.</b>\n\nThis is a bug in the Şuperuser Whitelist app that comes with most ROMs. You need to activate the \"USB Debugging\" option in your device settings under \"Applications -> Development\".
 
 \n\n<b>Is it possible to know what a particular application does on a particular event?</b>\n\nNo, not per se. However, if you select an entry, you will be able to see what the name of the <i>component</i> is that handles the event. Sometimes, the name gives you a hint. For example, an <i>AlarmInitReceiver</i> would likely initialize the alarms or notification that you have enabled in the application. Don\'t be surprised then if this application\'s alarms stop working if you disable the component.
 
