@@ -57,11 +57,13 @@ public class ListActivity extends ExpandableListActivity {
 	static final private int DIALOG_CONFIRM_SYSAPP_CHANGE = 2;
 	static final private int DIALOG_UNINSTALL_WARNING = 3;
 	static final private int DIALOG_VIEW_OPTIONS = 4;
+	static final private int DIALOG_USB_DEBUGGING_NOTE = 5;
 
 	static final private String PREFS_NAME = "common";
 	static final private String PREF_FILTER_SYS_APPS = "filter-sys-apps";
 	static final private String PREF_FILTER_ENABLED_APPS = "filter-enabled-apps";
 	static final private String PREF_UNINSTALL_WARNING_SHOWN = "uninstall-warning-shown";
+	static final private String PREF_USB_DEBUGGING_INFO_SHOWN = "usb-debug-info-shown";
 
 
 	private MenuItem mExpandCollapseToggleItem;
@@ -147,6 +149,11 @@ public class ListActivity extends ExpandableListActivity {
 
 			// Initial load.
 			loadAndApply();
+		}
+
+		if (!mPrefs.getBoolean(PREF_USB_DEBUGGING_INFO_SHOWN, false)) {
+			showDialog(DIALOG_USB_DEBUGGING_NOTE);
+			mPrefs.edit().putBoolean(PREF_USB_DEBUGGING_INFO_SHOWN, true).commit();
 		}
 	}
 
@@ -329,6 +336,16 @@ public class ListActivity extends ExpandableListActivity {
 					}
 				})
 				.setNegativeButton(android.R.string.cancel, null)
+				.create();
+		}
+
+		else if (id == DIALOG_USB_DEBUGGING_NOTE)
+		{
+			return new AlertDialog.Builder(ListActivity.this)
+				.setTitle(R.string.info)
+				.setMessage(R.string.usb_debugging_note)
+				.setIcon(android.R.drawable.ic_dialog_info)
+				.setPositiveButton(android.R.string.ok, null)
 				.create();
 		}
 
