@@ -3,6 +3,8 @@
 	* Fixed state change on some 2.1. ROMs that apparently have 
 	  pm not in the path.
 	* Added support for two new events (SECRET_CODE, SPN_STRINGS_UPDATED). 
+	* On first use and on the help screen we now show information about 
+	  how to workaround the freeze bug in the Superuser Whitelist app.
 
 1.2.1 (2009-10-29)
 	* "Eclair-ready" (compiled against 2.0).
